<resources>
    <string name="app_name">Selene</string>
    <string name="past">Past</string>
    <string name="present">Present</string>
    <string name="future">Future</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="attach_an_image">Attach an image</string>
    <string name="share">Share</string>
    <string name="note_text_placeholder">In Greek mythology, Selene is the goddess of the moon.\n\nShe is the daughter of the Titans Hyperion and Theia, and sister of the sun-god Helios, and Eos, goddess of the dawn. She drives her moon chariot across the heavens.\n\nSeveral lovers are attributed to her various myths, including Zeus, Pan, and the mortal Endymion. In classical times, Selene was often identified with Artemis, much as her brother, Helios, was identified with Apollo. Both Selene and Artemis were also associated with Hecate, and all three were regarded as lunar goddesses, although only Selene was regarded as the personification of the moon itself. Her Roman equivalent is Luna.\n\nThe etymology of Selene is uncertain, but the  name is of Greek origin, it is likely connected to the word selas meaning “light.”</string>
    <string name="new_note_hint">Start writing…</string>
    <string name="untitled">Untitled</string>
    <string name="default_palette">default</string>
    <string name="sky_palette">sky</string>
    <string name="sky_light_palette">sky light</string>
    <string name="interior_palette">interior</string>
    <string name="interior_light_palette">interior light</string>
    <string name="water_palette">water</string>
    <string name="water_light_palette">water light</string>
    <string name="wood_palette">wood</string>
    <string name="wood_light_palette">wood light</string>
    <string name="try_writing_a_note">New note</string>
    <string name="empty_view_text">nothing here yet</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Un-archive</string>
    <string name="about_title">Selene is the first mutative app, designed by Liam Spradlin and built by Francisco Franco</string>
    <string name="about">About</string>
    <string name="about_selene">About selene</string>
    <string name="google_plus">Google+</string>
    <string name="liam_spradlin">Liam Spradlin</string>
    <string name="liam_spradlin_description">Designer \u2728</string>
    <string name="twitter">Twitter</string>
    <string name="francisco_franco">Francisco Franco</string>
    <string name="francisco_franco_description">Developer \uD83E\uDD84</string>
    <string name="play_store_apps">Google Play Store</string>
    <string name="links">Links</string>
    <string name="libraries">Libraries</string>
    <string name="libraries_description">These helped Selene happen</string>
    <string name="appcompat">appcompat</string>
    <string name="cardview">cardview</string>
    <string name="design">design</string>
    <string name="customtabs">customtabs</string>
    <string name="butterknife">butterknife</string>
    <string name="realm">realm</string>
    <string name="tinybus">tinybus</string>
    <string name="icepick">icepick</string>
    <string name="materialize">materialize</string>
    <string name="fastadapter">fastadapter</string>
    <string name="mutate_more">#mutatemore</string>
    <string name="mutate_more_title">Links for mutative design</string>
    <string name="mutate_more_description">Learn more and see the source code</string>
    <string name="selene_source_code">Selene source code</string>
    <string name="project_phoebe">Project Phoebe</string>
    <string name="url_liam_google_plus">https://plus.google.com/+LiamSpradlin</string>
    <string name="url_liam_twitter">https://twitter.com/liamspradlin</string>
    <string name="url_francisco_google_plus">https://plus.google.com/u/0/+FranciscoFranco1990</string>
    <string name="url_francisco_twitter">https://twitter.com/franciscof_1990</string>
    <string name="url_francisco_play_store">https://play.google.com/store/apps/developer?id=Francisco+Franco</string>
    <string name="url_appcompat">http://developer.android.com/tools/support-library/features.html#v7-appcompat</string>
    <string name="url_cardview">http://developer.android.com/tools/support-library/features.html#v7-cardview</string>
    <string name="url_design">http://developer.android.com/tools/support-library/features.html#design</string>
    <string name="url_customtabs">http://developer.android.com/tools/support-library/features.html#custom-tabs</string>
    <string name="url_butterknife">https://github.com/JakeWharton/butterknife</string>
    <string name="url_realm">https://github.com/realm/realm-java</string>
    <string name="url_tinybus">https://github.com/beworker/tinybus</string>
    <string name="url_icepick">https://github.com/frankiesardo/icepick</string>
    <string name="url_materialize">https://github.com/mikepenz/Materialize</string>
    <string name="url_fastadapter">https://github.com/mikepenz/FastAdapter</string>
    <string name="url_selene_source_code">http://source.phoebe.xyz/</string>
    <string name="url_project_phoebe">https://medium.com/project-phoebe</string>
    <string name="note_already_exists">A note with this name already exists</string>
    <string name="unreminder">Un-reminder</string>
    <string name="reminder">reminder</string>
    <string name="plaid">plaid</string>
    <string name="url_plaid">https://github.com/nickbutcher/plaid</string>
    <string name="intent_chooser_title">Share your note</string>
</resources>
